<resources>
    <string name="app_name">Mr. Task</string>

    <!-- Login -->
    <string name="login_title">Logowanie</string>
    <string name="login_true_message">Zalogowano</string>
    <string name="login_false_message">Błędne dane</string>
    <string name="register_title">Rejestracja</string>
    <string name="login_text">Zaloguj się</string>
    <string name="register_text">Zarejestruj się</string>
    <string name="cancel_text">Anuluj</string>
    <string name="register_question">Nie masz profilu?</string>
    <string name="first_name_label">Imię</string>
    <string name="last_name_label">Nazwisko</string>
    <string name="login_label">Login</string>
    <string name="password_label">Hasło</string>
    <string name="repeat_password_label">Powtórz hasło</string>
    <string name="user_does_not_exists">Użytkownik nie istnieje</string>
    <string name="user_exists">Logowanie pomyślne</string>
    <string name="login_error">Coś poszło nie tak</string>
    <!-- End of login -->

    <!-- Task list / main window -->
    <string name="last_task_title">Ostatnie zadania</string>
    <string name="title_add_task">Dodaj zadanie</string>
    <string name="title_task_preview">Podgląd zadania</string>
    <!-- End of task list -->

    <!-- Task -->
    <string name="task_priority_label">Priorytet:</string>
    <string name="task_status_label">Status:</string>
    <string name="task_created_label">Utworzone</string>
    <string name="task_by_label">przez</string>
    <string name="task_last_modified_label">Ostatnio modyfikowane</string>
    <string name="task_deadline_label">Termin</string>
    <string name="deadline_button_label">Termin</string>

    <string name="task_placeholder_description">Opis</string>
    <string name="task_placeholder_title">Tytuł</string>
    <string name="task_placeholder_receiver">Odbiorca</string>
    <!-- End of task -->

    <!-- Task example -->
    <string name="task_id_example">1</string>
    <string name="task_title_example">Zrobić program To do list</string>
    <string name="task_priority_example">Wysoki</string>
    <string name="task_status_example">Nowe</string>
    <string name="task_date_example">19/03/2019</string>
    <string name="task_description_example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry a type specimen book.</string>
    <!-- End of task example -->

    <!-- Buttons -->
    <string name="action_add_task_text">Dodaj zadanie</string>
    <string name="action_show_list_text">Pokaż listę</string>
    <string name="button_add_text">Dodaj</string>
    <string name="button_cancel_text">Anuluj</string>
    <string name="button_close_text">Zamknij</string>
    <string name="button_delete_text">Usuń</string>
    <string name="button_assign_task_text">Przyjmij</string>
    <string name="button_finish_text">Zakończ</string>
    <string name="button_save_text">Zapisz</string>
    <string name="button_update_text">Zaktualizuj</string>
    <!-- End of buttons -->



    <!--Common-->
    <string name="common_title">Tytuł</string>
    <string name="common_priority">Priorytet</string>
    <string name="common_description">Opis</string>
    <!-- End of common -->

    <!-- Messages -->
    <string name="task_added">Dodano zadanie</string>
    <string name="task_updated">Zaktualizowano zadanie</string>
    <string name="task_deleted">Usunięto zadanie</string>
    <string name="not_all_fields_are_valid">Nie podano wszystkich danych</string>
    <string name="confirm">Potwierdź</string>
    <string name="question_confirm_delete_task">Czy na pewno chcesz usunąć zadanie?</string>

        <!-- Errors -->
        <string name="error_while_processing">Podczas przetwarzania wystąpił problem</string>
        <string name="error_while_adding_task">Podczas dodawania zadania wystąpił problem</string>
        <string name="error_while_deleting_task">Podczas usuwania zadania wystąpił problem</string>
        <string name="error_task_already_exists">Takie zadanie już istnieje</string>
    <!-- End of messages -->

    <!-- Buttons actions -->
    <string name="button_action_positive">Tak</string>
    <string name="button_action_negative">Nie</string>
    <string name="button_action_cancel">Anuluj</string>
    <!-- End of buttons actions -->

</resources>
