<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:padding="32dp"
    android:elevation="12dp"
    app:cardCornerRadius="10dp"
    android:orientation="vertical"
    app:layout_constraintCircleRadius="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_title_example"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:textSize="14sp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_deadline_label"
                    android:layout_marginRight="4sp"/>

                <TextView
                    android:id="@+id/task_expiration_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_date_example"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- Priority -->
                <TextView
                    android:id="@+id/task_priority_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/task_priority_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/task_priority"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/task_priority_example"
                    android:textSize="16sp"/>

                <!-- Status -->
                <TextView
                    android:id="@+id/task_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/task_status_label"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/task_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/task_status_example"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/task_description_example"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/task_status"
                app:layout_constraintStart_toStartOf="@+id/task_priority_label"
                app:layout_constraintTop_toBottomOf="@+id/task_priority_label"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_created_label"
                    android:layout_marginRight="4sp"></TextView>

                <TextView
                    android:id="@+id/task_creation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11/02/2019"
                    android:layout_marginRight="4sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_by_label"
                    android:layout_marginRight="4sp"></TextView>

                <TextView
                    android:id="@+id/task_author_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hubwaw"></TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.cardview.widget.CardView>
