<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_task_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetails"
    android:padding="16dp">

    <!-- Title-->
    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/task_placeholder_title"
        android:textSize="20sp"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/status_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/task_title"
        app:layout_constraintStart_toStartOf="@+id/task_title"
        app:layout_constraintTop_toBottomOf="@+id/task_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="4sp"
            android:text="@string/task_status_label" />

        <TextView
            android:id="@+id/task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/task_status_example"/>
     </LinearLayout>

    <!-- Priority-->
    <LinearLayout
        android:id="@+id/priority_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/status_wrapper"
        app:layout_constraintStart_toStartOf="@+id/status_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/status_wrapper"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/priority_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_priority"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/task_title"
                app:layout_constraintStart_toStartOf="@+id/task_title"
                app:layout_constraintTop_toBottomOf="@+id/task_title"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/task_priority_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/priority_label"
                app:layout_constraintStart_toStartOf="@+id/priority_label"
                app:layout_constraintTop_toBottomOf="@+id/priority_label"
                app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>

        <TextView
            android:id="@+id/task_expiration_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/round_calendar_today_24"
            android:hint="@string/deadline_button_label"
            android:textSize="18sp" />

    </LinearLayout>


    <!-- Description -->
    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:hint="@string/task_placeholder_description"
        android:textSize="18sp"
        android:inputType="textCapSentences|textMultiLine"
        android:drawableLeft="@drawable/round_notes_24"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/priority_wrapper"
        app:layout_constraintStart_toStartOf="@+id/priority_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/priority_wrapper"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/receiver_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/task_placeholder_receiver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_description"
        app:layout_constraintStart_toStartOf="@+id/task_description"
        app:layout_constraintTop_toBottomOf="@+id/task_description"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/details_receiver_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:hint="@string/task_placeholder_receiver"
        android:textSize="18sp"
        android:drawableLeft="@drawable/round_person_24"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/receiver_label"
        app:layout_constraintStart_toStartOf="@+id/receiver_label"
        app:layout_constraintTop_toBottomOf="@+id/receiver_label"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Buttons-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_description"
        app:layout_constraintStart_toStartOf="@+id/task_description"
        app:layout_constraintTop_toBottomOf="@+id/details_receiver_spinner"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_assign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_assign_task_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_finish_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWarning"
            android:text="@string/button_delete_text"
            android:textColor="@color/TextOnWarning" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>