<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_task_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetails">

    <!-- Title-->
    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:hint="Tytuł"
        android:textSize="20sp"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Status -->
    <TextView
        android:id="@+id/task_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/task_status_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_status"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/task_status"
        app:layout_constraintTop_toBottomOf="@+id/task_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/task_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/task_status_example"
        android:textColor="@color/TextOnDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/task_title"
        app:layout_constraintTop_toBottomOf="@+id/task_status_label"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Date -->
    <TextView
        android:id="@+id/task_expiration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_date_example"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_description"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/task_description"
        app:layout_constraintTop_toBottomOf="@+id/task_description"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Priority-->

    <TextView
        android:id="@+id/task_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/task_last_modified_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/task_expiration_date"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/task_description"
        app:layout_constraintTop_toBottomOf="@+id/task_description"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/common_priority"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/task_title"
        app:layout_constraintTop_toBottomOf="@+id/task_title"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/task_priority_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/priority_label"
        app:layout_constraintTop_toBottomOf="@+id/priority_label"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Description -->
    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Opis"
        android:inputType="textCapSentences|textMultiLine"
        android:maxHeight="200dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_priority_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/task_priority_spinner"
        app:layout_constraintTop_toBottomOf="@+id/task_priority_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Buttons-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/task_description"
        app:layout_constraintStart_toStartOf="@+id/task_description"
        app:layout_constraintTop_toBottomOf="@+id/task_date_label"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_assign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_assign_task_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_finish_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWarning"
            android:text="@string/button_delete_text"
            android:textColor="@color/TextOnWarning" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>